# fdir-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
AutoGenerated.X/nbproject/: configurations.xml
inc/: COBS.hpp  ECSS_Configuration.hpp  FreeRTOSConfig.h  main.hpp
inc/Parameters/: SystemParameterMonitoring.hpp  SystemParameters.hpp
inc/Peripherals/: MCP9808-constants.hpp  MCP9808.hpp
inc/Tasks/: ECSSTask.h  InternalTemperatureTask.hpp  TemperatureTask.hpp  UARTRXTask.hpp  UARTTask.hpp
src/: main.cpp
src/Parameters/: SystemParameterMonitoring.cpp  SystemParameters.cpp
src/Peripherals/: MCP9808-internal.cpp  MCP9808.cpp
src/Tasks/: ECSSTask.cpp  InternalTemperatureTask.cpp  TemperatureTask.cpp  UARTRXTask.cpp  UARTTask.cpp
src/config/default/: ATSAMV71Q21B.ld  definitions.h  initialization.c  interrupts.c  interrupts.h  startup_gcc.c
src/config/default/default.mhc/: GraphSettings.yml  HarmonyCore.yml  afec0.yml  core.yml  project.yml  settings.yml  twihs0.yml  twihs2.yml  usart1.yml
src/config/default/peripheral/afec/: plib_afec0.c  plib_afec0.h  plib_afec1.c  plib_afec1.h
src/config/default/peripheral/clk/: plib_clk.c
src/config/default/peripheral/pio/: plib_pio.c  plib_pio.h
src/config/default/peripheral/twihs/master/: plib_twihs0_master.c  plib_twihs2_master.c
src/platform/: ErrorHandler.cpp  Logger.cpp  Service.cpp
